# FHV-Master

./: .gitignore  README.md
Semester 1/AnyLogic/Uebung01/: Uebung01.docx
Semester 1/AnyLogic/Uebung03/: Uebung03.docx
Semester 1/C/00_Speicherverwaltung/: MM.c
Semester 1/C/00_Tutorial/: 00_helloworld.c  01_fahrenheit.c  fahrenheit  helloworld
Semester 1/C/AphroCite/: AphroCite.h  AphroCiteTest.c  CMakeLists.txt
Semester 1/C/ArrayIterator/: ArrayIterator.h  CMakeLists.txt  main.cpp
Semester 1/C/GenericLinkedList/: CMakeLists.txt  doublelist.c  doublelist.h  intlist.c  intlist.h  list.c  list.h  main.c
Semester 1/C/InputStreamerLibrary/: ByteArrayInputStream.c  ByteArrayInputStream.h  CMakeLists.txt  InputStream.h  UpperCaseInputStream.c  UpperCaseInputStream.h  main.c
Semester 1/C/LexicalAnalyzer/: CMakeLists.txt  LexicalAnalyzer.c  LexicalAnalyzer.h
Semester 1/C/MemoryManagement/: CMakeLists.txt  main.c  mm.c  mm.h
Semester 1/C/Observer/: CMakeLists.txt  main.c  observer.c  observer.h
Semester 1/C/StackTemplate/: CMakeLists.txt  Stack.h  main.cpp
Semester 1/C/Tutorial/: CMakeLists.txt  main.c
Semester 1/CPP/SetJmp/: CMakeLists.txt  main.c
Semester 1/CPP/Vorlesung/: CMakeLists.txt  Person.cpp  Person.h  Stack.h  Student.cpp  Student.h  TypedStack.h  main.cpp
Semester 1/JFLAP/Tutorial/: 01_NFA.jff  02_NFA.jff  03_NFA_Ex01.jff  03_NFA_Ex02.jff  03_NFA_Ex03.jff  NFA-1.jflap.xml  NFA-2.jflap.xml  NFA_(ab_abc)star.jflap.xml  NFA_a(b+c)star_a.jflap.xml
Semester 1/JFLAP/Uebung01/: 2a.jff  2b.jff  2c.jff  DFA0_1.jff  DFA0_2.jff  DFA1_2.jff  NFA3.jff  (+5 more)
(+328 files in other folders)
